# discharge-parametric-studies

./: .gitignore  ARCHITECTURE.md  ConfigUtil.py  Configurator.py  GenericArrayJobJobscript.py  Jobscripts.html  JsonRequirement.py  README.md  TODO.txt  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  slurm.toml
Architecture/: CallChain.html  DbStudy.html  DummyParams.html  JsonUri.html  OutputDir.html  Overview.html  ParamSpace.html  RepoLayout.html  RunDefinition.html  ScriptRoles.html
Example/: Compile.html  Inspect.html  Monitor.html  OutputLayout.html  ParamSpace.html  Prerequisites.html  RunConfigurator.html  SmokeTest.html
Installation/: CLI.html  GetSource.html  InstallationInstructions.html  Prerequisites.html  SlurmConfig.html
Introduction/: BasicUsage.html  OverallDesign.html  Quickstart.html  RunDefinition.html
Jobscripts/: DischargeInceptionScript.html  GenericArrayJob.html  PlasmaScript.html  SetupTool.html  WhereFit.html
PostProcess/: AnalyzeTimeSeries.html  AnalyzeTimeSeries.py  BuildOverviewReport.py  ExtractInceptionVoltages.html  ExtractInceptionVoltages.py  Gather.py  GatherPlasmaEventLogs.html  GatherPlasmaEventLogs.py  PlotDeltaERel.html  PlotDeltaERel.py  Summarize.sh
Prerequisites/: Example.html  Installation.html  RequiredSoftware.html
Scripts/: DischargeInceptionJobscript.py  ExtractElectronPositions.py  PlasmaJobscript.py
Setup/: setup.py
Util/: GenericArrayJob.sh  LmodModules.sh
_sources/: Jobscripts.rst.txt
discharge_inception/: cli.py  config_util.py  configurator.py  slurm_status.py
(+118 files in other folders)
