[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "discharge-ps"
version = "0.1.0"
description = "Parametric study configurator for chombo-discharge simulations"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
plot = ["matplotlib", "scipy"]

[project.scripts]
discharge-ps = "discharge_ps.configurator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["discharge_ps*"]
