[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "discharge-inception"
version = "0.1.0"
description = "Parametric study configurator for chombo-discharge simulations"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "scipy"]

[project.scripts]
inception = "discharge_inception.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["discharge_inception*", "PostProcess*"]
